--- a/css/main.css
+++ b/css/main.css
@@ -10927,32 +10927,31 @@ readers do not read off random characters that represent icons */
 
 body, html {
   height: 100%;
-  width: 100%; }
+  max-width: 100%;
+  background-color: white;
+  padding: 0px; }
 
-header .header .topNav .nav-link {
+header .header-wrapper .topNav .nav-link {
   padding-top: 0;
   padding-bottom: 0;
   font-size: 12px;
   color: #007b5e; }
-header .header .topNav .fab {
-  font-size: 20px; }
-header .header .navMenu .nav-link {
+header .header-wrapper .navigation .navMenu .nav-item {
+  padding: 0 35px; }
+header .header-wrapper .navigation .navMenu .nav-link {
   color: #005a82;
   font-size: 12px;
   font-weight: 700;
-  text-align: center;
   text-transform: uppercase;
   padding: 0;
   line-height: 80px;
   font-family: "Lato-Black"; }
-header .header .navMenu .nav-item {
-  padding: 0 35px; }
-header .header .navMenu .active {
+header .header-wrapper .navigation .navMenu a:hover {
+  color: #fd5001;
   border-bottom: 2px solid #fd5001; }
-header .header .navMenu a:hover {
-  color: #ffc107;
-  border-bottom: 2px solid #ffc107; }
-header .header .navMenu .btn-primary {
+header .header-wrapper .navigation .navMenu .active {
+  border-bottom: 2px solid #fd5001; }
+header .header-wrapper .navigation .navMenu .btn-primary {
   color: #fff;
   padding: 0 40px;
   line-height: 50px;
@@ -10961,24 +10960,16 @@ header .header .navMenu .btn-primary {
   border-radius: 25px;
   border: none;
   font-weight: 600;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  background: #00a9d1; }
 
-._ngcontentHero {
+.app-home .main {
   background: url(../images/homepage.svg) top center/cover no-repeat #fff;
   color: #fff;
   font-family: "Poppins";
   padding-top: 66px;
   padding-bottom: 280px; }
-  ._ngcontentHero h1 {
-    font-size: 60px;
-    font-family: "Rubik-Bold";
-    font-weight: bolder; }
-  ._ngcontentHero h2 {
-    font-size: 28px;
-    font-family: "GalanoGrotesqueAltLight";
-    line-height: 40px;
-    font-weight: bold; }
-  ._ngcontentHero .form-control {
+  .app-home .main .main-wrapper .search-box .form-control {
     background-color: rgba(3, 68, 102, 0.17);
     padding: 5px 20px 5px 5px;
     height: 43px;
@@ -10986,396 +10977,122 @@ header .header .navMenu .btn-primary {
     padding-left: 40px;
     border: none;
     color: #ffffff; }
-  ._ngcontentHero .btn {
+  .app-home .main .main-wrapper .search-box .btn {
     border-radius: 50px;
     padding-right: 20px;
+    padding-left: 20px;
     background-color: rgba(3, 68, 102, 0.17);
     border: none;
     text-transform: uppercase;
     font-family: "Lato-Black";
     font-weight: bold; }
-  ._ngcontentHero .form-control:focus {
+  .app-home .main .main-wrapper .search-box .form-control:focus {
     color: #fff;
     background-color: rgba(3, 68, 102, 0.17);
     border: 0;
     outline: 0;
     box-shadow: none; }
-  ._ngcontentHero ::placeholder {
+  .app-home .main .main-wrapper .search-box ::placeholder {
     color: #fff; }
-  ._ngcontentHero .btn-secondary {
-    color: #fff;
+  .app-home .main .main-wrapper .search-box .input-group-append {
+    margin-left: -8rem; }
+  .app-home .main .main-wrapper .main-content h1 {
+    font-size: 55px;
+    font-family: "Rubik-Bold";
+    font-weight: bolder; }
+  .app-home .main .main-wrapper .main-content p {
+    font-size: 18px;
+    font-family: "Poppins"; }
+  .app-home .main .main-wrapper ._ngbtn .btn {
+    color: #005a82;
     padding: 0 40px;
     line-height: 50px;
-    font-size: 10px;
+    font-size: 12px;
     border-radius: 25px;
     border: none;
     font-weight: 600;
-    text-transform: uppercase;
-    background: #fd5001; }
+    text-transform: uppercase; }
 
-footer {
-  background: #0D3250;
-  color: #ddd;
-  font-family: 'Trebuchet MS'; }
-  footer .link-item p {
-    font-size: 12px; }
-  footer .link-item a {
-    font-size: 12px;
-    color: #ddd; }
-  footer .link-item a:hover {
-    color: #007b5e; }
-
-.content-wrapper {
-  /* shop preview end */ }
-  .content-wrapper section {
-    padding-top: 50px;
-    padding-bottom: 50px;
-    font-family: "Poppins"; }
-  .content-wrapper .shop-preview .shop-content-preview .lead {
-    font-size: 30px;
-    color: #051c3d;
-    font-weight: 600; }
-  .content-wrapper .shop-preview .shop-content-preview .btn-primary {
-    font-size: 14px;
-    font-family: "Poppins";
-    font-weight: bold;
-    text-transform: uppercase;
-    background: transparent;
-    border: 2px solid #02b3e4;
-    border-top-left-radius: 50px;
-    border-bottom-left-radius: 50px;
-    border-top-right-radius: 50px;
-    border-bottom-right-radius: 50px;
-    letter-spacing: 1.12px;
-    color: #333;
-    padding: 12px 25px; }
-  @media (max-width: 767.98px) {
-    .content-wrapper .shop-preview .shop-content-preview .lead, .content-wrapper .shop-preview .shop-content-preview p {
-      text-align: center; } }
-  @media (max-width: 767.98px) {
-    .content-wrapper .shop-preview .shop-content-preview p {
-      text-align: center !important; } }
-  .content-wrapper .work-preview {
-    padding-top: 0px; }
-    .content-wrapper .work-preview .title {
-      font-size: 36px;
-      font-family: "Lato";
-      font-weight: lighter;
-      border-bottom: 1px solid #E0E0E0; }
-  .content-wrapper .travel-content-preview .lead {
-    font-size: 30px;
-    color: #051c3d;
-    font-weight: 600; }
-  .content-wrapper .travel-content-preview .btn-primary {
-    font-size: 14px;
-    font-family: "Poppins";
-    font-weight: bold;
-    text-transform: uppercase;
-    background: transparent;
-    border: 2px solid #02b3e4;
-    border-top-left-radius: 50px;
-    border-bottom-left-radius: 50px;
-    border-top-right-radius: 50px;
-    border-bottom-right-radius: 50px;
-    letter-spacing: 1.12px;
-    color: #333;
-    padding: 12px 25px; }
-  .content-wrapper .toggle-content-wrapper .toggle-tab-wrapper {
-    background: #F0F0F0; }
-    .content-wrapper .toggle-content-wrapper .toggle-tab-wrapper .navbar-toggle-tabs .nav-link {
-      display: block;
-      font-weight: 700;
-      text-transform: uppercase;
-      padding: 40px 0;
-      color: #506077;
-      border-radius: 0;
-      border: 0;
-      font-size: 11px; }
-    .content-wrapper .toggle-content-wrapper .toggle-tab-wrapper .navbar-toggle-tabs .nav-link.active {
-      background: #fff;
-      color: #17d3b9;
-      border-top: 2px solid #17d3b9;
-      border-color: #fff;
-      border-top-color: #17d3b9; }
-  .content-wrapper .toggle-content-wrapper .tab-content {
-    padding: 120px 0; }
-  .content-wrapper .toggle-content-wrapper h2 {
-    font-size: 26px;
-    color: #051c3d; }
-  .content-wrapper .toggle-content-wrapper img {
-    width: 100%;
-    height: auto; }
-
-/* general content wrapper end */
-.testimonial {
-  background: #dddddd;
-  padding-top: 40px;
-  padding-bottom: 40px;
-  font-family: "Lato" !important;
-  color: #000000; }
-  .testimonial .testimonial-title {
-    font-size: 40px;
-    border-bottom: 1px solid #E0E0E0; }
-  .testimonial .testimonial-lead {
-    font-size: 18px; }
-  .testimonial .carousel-inner {
-    background-color: #fff;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    min-height: 300px; }
-    .testimonial .carousel-inner .comment {
-      font-size: 12px;
-      font-family: "Poppins";
-      color: #000000; }
-    .testimonial .carousel-inner .lead {
-      font-size: 20px;
-      font-family: "Lato";
-      font-weight: 900; }
-    .testimonial .carousel-inner p {
-      font-family: "Poppins";
-      font-weight: 700;
-      color: #5faf00; }
-  .testimonial .carousel-indicators li {
-    background: #dddddd; }
-  .testimonial .carousel-indicators .active {
-    background: #5faf00; }
-
-.active-orders {
+section ._ngsection {
+  padding-top: 60px;
+  padding-bottom: 30px; }
+section ._ngorders {
   font-family: "Montserrat"; }
-  .active-orders .card {
+  section ._ngorders .card {
     border: none; }
-  .active-orders .card-body .card-title {
+  section ._ngorders .card-body .card-title {
     font-weight: bold;
     font-family: "Montserrat-Bold";
     font-size: 14px;
     letter-spacing: -0.04em;
     line-height: 22px; }
-  .active-orders .card-body span {
+  section ._ngorders .card-body span {
     font-size: 11px;
-    font-weight: bold; }
-    .active-orders .card-body span .fa-clock {
+    font-weight: 600; }
+    section ._ngorders .card-body span .fa-clock {
       color: #fd5001; }
 
-/******************* Timeline Demo - 4 *****************/
-.main-timeline4 {
-  overflow: hidden;
-  position: relative; }
+footer {
+  background-color: #09223b;
+  color: #fff;
+  font-family: "Montserrat"; }
+  footer .footer .border-bottom {
+    border-bottom: 1px solid #0f3a64 !important; }
+  footer .footer .btn {
+    font-weight: 600;
+    padding: 0 35px;
+    border-radius: 50px;
+    line-height: 35px;
+    text-transform: uppercase; }
+  footer ._ngfootnav h6 {
+    color: #8FA1B2;
+    text-transform: uppercase;
+    font-size: 10px;
+    font-weight: 700;
+    letter-spacing: 2px; }
+  footer ._ngfootnav .nav-link {
+    color: #fff;
+    padding-left: 0;
+    font-size: 10px; }
+  footer ._ngfootnav a:hover {
+    color: #007b5e;
+    text-decoration: underline; }
 
-.main-timeline4:before {
-  content: "";
-  width: 5px;
-  height: 70%;
-  background: #0D3250;
-  position: absolute;
-  top: 70px;
-  left: 50%;
-  transform: translateX(-50%); }
-
-.main-timeline4 .timeline-content:before, .main-timeline4 .timeline:before {
-  top: 50%;
-  transform: translateY(-50%);
-  content: ""; }
-
-.main-timeline4 .timeline {
-  width: 50%;
-  padding-left: 95px;
-  float: right;
-  position: relative; }
-
-.main-timeline4 .timeline:before {
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  background: #fff;
-  border: 5px solid #0d3250;
-  position: absolute;
-  left: -10px; }
-
-.main-timeline4 .timeline-content {
-  display: block;
-  padding-left: 140px;
-  position: relative; }
-
-.main-timeline4 .timeline-content:before {
-  width: 90px;
-  height: 10px;
-  border-top: 7px dotted #0d3250;
-  position: absolute;
-  left: -92px; }
-
-.main-timeline4 .year {
-  display: inline-block;
-  width: 120px;
-  height: 120px;
-  line-height: 100px;
-  border-radius: 50%;
-  border: 10px solid #f54957;
-  font-size: 30px;
-  color: #f54957;
-  text-align: center;
-  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.4);
-  position: absolute;
-  top: 0;
-  left: 0; }
-
-.main-timeline4 .year:before {
-  content: "";
-  border-left: 20px solid #f54957;
-  border-top: 10px solid transparent;
-  border-bottom: 10px solid transparent;
-  position: absolute;
-  bottom: -13px;
-  right: 0;
-  transform: rotate(45deg); }
-
-.main-timeline4 .title {
-  color: #f54957; }
-
-.main-timeline4 .description {
-  color: #a8a8a8;
-  font-family: "-apple-system, BlinkMacSystemFont, " Segoe UI ", Roboto, " Helvetica Neue ", Arial, sans-serif;"; }
-
-.main-timeline4 .timeline:nth-child(2n) {
-  padding: 0 95px 0 0; }
-
-.main-timeline4 .timeline:nth-child(2n) .timeline-content:before, .main-timeline4 .timeline:nth-child(2n) .year, .main-timeline4 .timeline:nth-child(2n):before {
-  left: auto;
-  right: -10px; }
-
-.main-timeline4 .timeline:nth-child(2n) .timeline-content {
-  padding: 0 140px 0 0; }
-
-.main-timeline4 .timeline:nth-child(2n) .timeline-content:before {
-  right: -92px; }
-
-.main-timeline4 .timeline:nth-child(2n) .year {
-  right: 0; }
-
-.main-timeline4 .timeline:nth-child(2n) .year:before {
-  right: auto;
-  left: 0;
-  border-left: none;
-  border-right: 20px solid #f54957;
-  transform: rotate(-45deg); }
-
-.main-timeline4 .timeline:nth-child(2) {
-  margin-top: 110px; }
-
-.main-timeline4 .timeline:nth-child(odd) {
-  margin: -110px 0 0; }
-
-.main-timeline4 .timeline:nth-child(even) {
-  margin-bottom: 80px; }
-
-.main-timeline4 .timeline:first-child, .main-timeline4 .timeline:last-child:nth-child(even) {
-  margin: 0; }
-
-.main-timeline4 .timeline:nth-child(2n) .year {
-  border-color: #1ebad0;
-  color: #1ebad0; }
-
-.main-timeline4 .timeline:nth-child(2) .year:before {
-  border-right-color: #1ebad0; }
-
-.main-timeline4 .timeline:nth-child(2n) .title {
-  color: #1ebad0; }
-
-.main-timeline4 .timeline:nth-child(3n) .year {
-  border-color: #7cba01;
-  color: #7cba01; }
-
-.main-timeline4 .timeline:nth-child(3) .year:before {
-  border-left-color: #7cba01; }
-
-.main-timeline4 .timeline:nth-child(3n) .title {
-  color: #7cba01; }
-
-.main-timeline4 .timeline:nth-child(4n) .year {
-  border-color: #f8781f;
-  color: #f8781f; }
-
-.main-timeline4 .timeline:nth-child(4) .year:before {
-  border-right-color: #f8781f; }
-
-.main-timeline4 .timeline:nth-child(4n) .title {
-  color: #f8781f; }
-
-@media only screen and (max-width: 1200px) {
-  .main-timeline4 .year {
-    top: 50%;
-    transform: translateY(-50%); } }
-@media only screen and (max-width: 990px) {
-  .main-timeline4 .timeline {
-    padding-left: 75px; }
-
-  .main-timeline4 .timeline:nth-child(2n) {
-    padding: 0 75px 0 0; }
-
-  .main-timeline4 .timeline-content {
-    padding-left: 130px; }
-
-  .main-timeline4 .timeline:nth-child(2n) .timeline-content {
-    padding: 0 130px 0 0; }
-
-  .main-timeline4 .timeline-content:before {
-    width: 68px;
-    left: -68px; }
-
-  .main-timeline4 .timeline:nth-child(2n) .timeline-content:before {
-    right: -68px; } }
-@media only screen and (max-width: 767px) {
-  .main-timeline4 {
-    overflow: visible; }
-
-  .main-timeline4:before {
-    height: 100%;
-    top: 0;
-    left: 0;
-    transform: translateX(0); }
-
-  .main-timeline4 .timeline:before, .main-timeline4 .timeline:nth-child(2n):before {
-    top: 60px;
-    left: -9px;
-    transform: translateX(0); }
-
-  .main-timeline4 .timeline, .main-timeline4 .timeline:nth-child(even), .main-timeline4 .timeline:nth-child(odd) {
-    width: 100%;
-    float: none;
-    text-align: center;
-    padding: 0;
-    margin: 0 0 10px; }
-
-  .main-timeline4 .timeline-content, .main-timeline4 .timeline:nth-child(2n) .timeline-content {
-    padding: 0; }
-
-  .main-timeline4 .timeline-content:before, .main-timeline4 .timeline:nth-child(2n) .timeline-content:before {
-    display: none; }
-
-  .main-timeline4 .timeline:nth-child(2n) .year, .main-timeline4 .year {
-    position: relative;
-    transform: translateY(0); }
-
-  .main-timeline4 .timeline:nth-child(2n) .year:before, .main-timeline4 .year:before {
+._ngabout {
+  color: #fff;
+  background-color: rgba(0, 0, 0, 0.75); }
+  ._ngabout ._ngcontentMission {
+    background: url(../images/fruit_stall.jpg); }
+  ._ngabout ._ngcontentVision {
+    background: url(../images/pdx3_mini.jpg) no-repeat;
+    background-size: cover; }
+  ._ngabout h2 {
+    color: #ffffff;
+    text-align: left;
+    font-family: Montserrat;
+    font-weight: 700;
+    font-style: normal; }
+  ._ngabout p {
+    color: #9ea3a8;
+    font-size: 12px; }
+  ._ngabout .btn {
+    color: #fff;
+    padding: 0 40px;
+    line-height: 50px;
+    font-size: 12px;
+    border-radius: 25px;
     border: none;
-    border-right: 20px solid #f54957;
-    border-top: 10px solid transparent;
-    border-bottom: 10px solid transparent;
-    top: 50%;
-    left: -23px;
-    bottom: auto;
-    right: auto;
-    transform: rotate(0); }
+    font-weight: 600;
+    background: transparent;
+    border: 2px solid #ddd;
+    text-transform: uppercase; }
 
-  .main-timeline4 .timeline:nth-child(2n) .year:before {
-    border-right-color: #1ebad0; }
+.modal-dialog {
+  max-width: 430px; }
 
-  .main-timeline4 .timeline:nth-child(3n) .year:before {
-    border-right-color: #7cba01; }
-
-  .main-timeline4 .timeline:nth-child(4n) .year:before {
-    border-right-color: #f8781f; }
-
-  .main-timeline4 .inner-content {
-    padding: 10px; } }
+.modal-content {
+  background: white;
+  border: none;
+  border-radius: 0; }
 
 /*# sourceMappingURL=main.css.map */
